--- a/Application/SampleWebApplication/Views/Home/Index.cshtml
+++ b/Application/SampleWebApplication/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?linkid=862410">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Azure DevOps Project.......</h2>
+        <h2>manohar......</h2>
         <p>Learn more about all you can do with Azure DevOps project by visiting the documentation..</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?linkid=862126">Learn more &raquo;</a></p>
     </div>
